Fix: Tags index aside can grow too large
When a site has a lot of tags, the aside for the tags index page can
grow too large on small (mobile) devices. Because the responsive design
pushes this column to the top as a box *and* makes it sticky, a large
set of tags will result in a slim (or now) window to view the actual
posts in the index.

Additionally, the margins and padding of this box was such that the
index flowed underneath and through it, making it difficult to read.

This fix adds three changes:

* Sets a `max-height` on mobile devices for the box (currently `25vh`).
  Scrollbars appear on overflow
* Adds some opaque whitespace at the top and bottom of this box. The
  whitespace at the bottom is a linear-gradient transition, making the
text flowing under it fade away gracefully.
* Adds a small box-shadow to make a clear visual distinction between the
  sticky index of tags and the listing of posts scrolling beneath it.

--- a/_sass/tags.scss
+++ b/_sass/tags.scss
@@ -4,6 +4,27 @@
   }
 }
 
+.tag-index {
+  // background: linear-gradient(to top, rgba($white, 0%) -50%, rgba($white, 100%));
+  @include media-breakpoint-down(sm) {
+    background: linear-gradient(to top, rgba($white, 0), $white 10%);
+    top: 0;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-top: -2rem;
+  }
+
+  .tag-group {
+    border: 1px solid $border-color;
+    box-shadow: $box-shadow-sm;
+
+    @include media-breakpoint-down(sm) {
+      overflow: auto;
+      max-height: 25vh;
+    }
+  }
+}
+
 .jumbotron {
   .tags {
     font-size: 1.5em;
